--- a/package.json
+++ b/package.json
@@ -7,31 +7,30 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --fix",
+    "lint": "eslint",
     "type-check": "tsc --noEmit",
     "prepare": "husky",
     "format": "prettier --write .",
     "clean": "rm -rf .next node_modules package-lock.json",
     "reset": "npm run clean && rm -rf node_modules && rm -rf package-lock.json && npm install",
     "test": "playwright test",
-    "test:ui": "playwright test -a-ui",
-    "analyze": "ANALYZE=true next build"
+    "test:ui": "playwright test -a-ui"
   },
   "dependencies": {
     "@react-zero-ui/core": "^0.3.4",
     "@react-zero-ui/icon-sprite": "^0.1.6",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
-    "fast-glob": "^3.3.3",
-    "lenis": "^1.3.8",
     "motion": "^12.23.12",
     "next": "^15.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "fast-glob": "^3.3.3",
     "@eslint/eslintrc": "^3.3.1",
     "@next/bundle-analyzer": "^15.3.2",
+    "@next/eslint-plugin-next": "^15.5.1",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^24.3.0",
@@ -39,8 +38,9 @@
     "@types/react-dom": "^19.1.2",
     "eslint": "^9.25.1",
     "eslint-config-next": "^15.3.2",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.2.6",
+    "eslint-plugin-unused-imports": "^4.2.0",
     "husky": "^9.1.7",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
