--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "prebuild": "zero-icons",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
