--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "austin-serb-portfolio",
+  "name": "olaf-koziara-portfolio",
   "version": "0.1.0",
   "private": true,
   "type": "module",
