--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@react-zero-ui/icon-sprite": "^0.1.6",
     "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
+    "i18next": "^25.6.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "motion": "^12.23.12",
     "next": "^15.5.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-i18next": "^16.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
